<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/eauth_reason_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/eauth_wrong_action"
        />
    
    <TextView
        android:id="@+id/eauth_reason_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/eauth_null"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textSize="26sp" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/eauth_message_failure_tips_up"
        android:textColor="@android:color/darker_gray"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/eauth_message_failure_tips_down"
        android:textColor="@android:color/darker_gray"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp" />
    
	<Button
        android:id="@+id/eauth_btn_ok"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/eauth_check_button_seletctor"
        android:text="@string/eauth_ok" 
        android:textSize="25sp"/>


</LinearLayout>
