<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/eauth_imageview_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/pingan_eauth"
            android:textColor="@color/grey"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/eauth_demo_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/demo_product"
            android:textColor="@color/grey"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/eauth_notice_tv"
            android:layout_width="220dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="@string/first_selecte_image"
            android:textColor="@color/gray"
            android:textSize="15sp" />

        <Button
            android:id="@+id/eauth_add_pic"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/eauth_button_seletctor_register"
            android:text="@string/select_image"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/eauth_action_account"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:text="@string/action_account"
            android:textColor="#FF79BC"
            android:textSize="15dp" />

        <RadioGroup
            android:id="@+id/eauth_randommode_rg"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/eauth_randommode_0"
                android:text="无"
                android:textColor="#FF79BC"
                android:textSize="15dp" />

            <RadioButton
                android:id="@+id/eauth_randommode_1"
                android:text="一"
                android:textColor="#FF79BC"
                android:textSize="15dp" />

            <RadioButton
                android:id="@+id/eauth_randommode_2"
                android:text="二"
                android:textColor="#FF79BC"
                android:textSize="15dp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/eauth_btn_start_detect"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/eauth_button_seletctor_confir"
            android:text="@string/eauth_start"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/cb_save_image"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/save_image"
            android:textColor="@color/red"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_save_image_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="路径为:"
            android:textColor="@color/gray"
            android:textSize="11sp" />
    </LinearLayout>

</LinearLayout>